--- a/client/src/components/ComponentInfo/componentinfo.scss
+++ b/client/src/components/ComponentInfo/componentinfo.scss
@@ -3,13 +3,15 @@
 .component_info {
     width: 100%;
     padding: 2rem 4rem;
-    height: 100vh;
-    overflow-y: auto;
+    // min-height: 100vh;
+    height: auto;
+    // overflow-y: auto;
     @include tablet {
         padding: 2rem;
     }
 
     h1 {
         margin-bottom: 2rem;
+        text-transform: capitalize;
     }
 }
