--- a/client/src/pages/Docs/docs.scss
+++ b/client/src/pages/Docs/docs.scss
@@ -1,7 +1,6 @@
 .docs {
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    height: auto;
     display: flex;
 
     .component {
